--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 4006
-DB_URI = mongodb://0.0.0.0:27017/ecommerce
-JWT_SECRET = mongodb://0.0.0.0:27017/ecommerce
+DB_URI = mongodb://0.0.0.0:27017/components
+JWT_SECRET = mongodb://0.0.0.0:27017/components
 JWT_EXPIRE = 3600
 COOKIE_EXPIRE = 60000
 AVATAR_URL = https://api.dicebear.com/7.x/adventurer/svg?seed=
