--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "copy-to-clipboard": "^3.3.3",
     "formik": "^2.4.6",
@@ -18,8 +20,10 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
+    "redux-persist": "^6.0.0",
     "sass": "1.45.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
