--- a/frontend-from-admin-panel/package.json
+++ b/frontend-from-admin-panel/package.json
@@ -16,6 +16,7 @@
     "copy-to-clipboard": "^3.3.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.0.8",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
